After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754928 - Broken .ui translations
Broken .ui translations
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Linux
: Normal major
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-09-12 17:51 UTC by Piotr Drąg
Modified: 2015-09-14 03:27 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Piotr Drąg 2015-09-12 17:51:54 UTC
Recent changes to .ui files converted all translatable="yes" to translatable="1". The latter is not recognized by any tools, so translations are not getting picked up.
Comment 1 Matthias Clasen 2015-09-13 05:12:17 UTC
what tools are we talking about ?

The parser that defines the GtkBuilder file format is ... GtkBuilder, which has always accepted y, Y, true, True, 1 and some other variations.
Comment 2 Piotr Drąg 2015-09-13 18:10:03 UTC
./make-pot produces a POT file without most of the .ui files' strings included, both on my computer and on damned-lies: https://l10n.gnome.org/POT/gtk+.master/gtk+.master.pl.po